various minor bugs corrections